--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ Temporary Items
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/saveactions_settings.xml
 
 # Generated files
 .idea/**/contentModel.xml
