ci modification for tests

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${basedir}</directory>
+                <includes>
+                    <include>CentralModel.xml</include>
+                    <include>Test.xml</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
