--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,6 @@
     </properties>
 
     <build>
-        <resources>
-            <resource>
-                <directory>${basedir}</directory>
-                <includes>
-                    <include>CentralModel.xml</include>
-                    <include>Test.xml</include>
-                </includes>
-            </resource>
-        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -46,6 +37,9 @@
                                     <includes>
                                         <include>CentralModel.xml</include>
                                         <include>Test.xml</include>
+                                        <include>archimate3_Diagram.xsd</include>
+                                        <include>archimate3_View.xsd</include>
+                                        <include>archimate3_Model.xsd</include>
                                     </includes>
                                     <filtering>true</filtering>
                                 </resource>
@@ -111,6 +105,11 @@
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
         </dependency>
     </dependencies>
 
