--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ pages:
     - test
   script:
     - mkdir public
-    - mv target/site/jacoco/index.html public
+    - mv target/site/jacoco public
   artifacts:
     paths:
       - public
