update gitignore, ignore user-specific settings

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,9 @@ Temporary Items
 .idea/**/dictionaries
 .idea/**/shelf
 .idea/**/saveactions_settings.xml
+.idea/jarRepositories.xml
+.idea/sonarlint/**/
+.idea/misc.xml
 
 # Generated files
 .idea/**/contentModel.xml
